--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-    <title>Leticia Barbosa Arquitetura e Urbanismo - Home</title>
+    <title>Arquitetura e Urbanismo - Home</title>
 </head>
 <body style="font-family: 'Montserrat', sans-serif;">
     <header>
@@ -23,7 +23,7 @@
     <main>
         <section>
             <h1 class="historia">Um pouco da nossa história...</h1>
-                <p>Sou a Letícia Barbosa, formada em Arquitetura e Urbanismo pela UFRJ.
+                <p>Somos a Arquitetura e Urbanismo
                     Ao longo da minha jornada adquirindo experiência e exercendo a profissão que sempre sonhei
                     tive a ideia de abrir meu próprio escritóriode Arquitetura, com profissionais capacitados e
                     mais do que isso apaixonados em tornar sonhos realidade. Gostariamos de oferecer a nossos clientes
@@ -50,7 +50,7 @@
     </main>
     <footer>
         <div class="fim">
-            <h2>Leticia Barbosa Arquitetura e Urbanismo</h2>
+            <h2>Arquitetura e Urbanismo</h2>
             <p class="copyright">&copy; Copyright Letícia Barbosa - 2023</p>
         </div>
     </footer>  
