--- a/projetos.html
+++ b/projetos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Leticia Barbosa Arquitetura e Urbanismo - Projetos</title>
+    <title>Arquitetura e Urbanismo - Projetos</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
@@ -46,7 +46,7 @@
     </main>
     <footer>
         <div class="fim">
-             <h2>Leticia Barbosa Arquitetura e Urbanismo</h2>
+             <h2>Arquitetura e Urbanismo</h2>
              <p class="copyright">&copy; Copyright Letícia Barbosa - 2023</p>
         </div>
     </footer>  
