--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <footer>
         <div class="fim">
             <h2>Arquitetura e Urbanismo</h2>
-            <p class="copyright">&copy; Copyright Letícia Barbosa - 2023</p>
+            <p class="copyright">&copy; Copyright - 2023</p>
         </div>
     </footer>  
 </body>
