--- a/projetos.html
+++ b/projetos.html
@@ -47,7 +47,7 @@
     <footer>
         <div class="fim">
              <h2>Arquitetura e Urbanismo</h2>
-             <p class="copyright">&copy; Copyright Letícia Barbosa - 2023</p>
+             <p class="copyright">&copy; Copyright - 2023</p>
         </div>
     </footer>  
 </body>
